<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rafael.bmicalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:text="@string/bmi_calculator"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/enter_your_weight_kg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginEnd="18dp"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/enter_your_height_m"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_bmi"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/bmiResult"
        android:layout_alignBottom="@+id/bmiResult"
        android:layout_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/BMIcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bmiResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/bmi_category_appears_here"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_80"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="1.80"
        android:textAlignment="center"
        tools:ignore="HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/bmiResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/calculate_result"
        android:textAlignment="center"
        android:layout_below="@+id/heightInput"
        android:layout_toEndOf="@+id/textView4"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/calculate_my_bmi"
        android:layout_below="@+id/heightInput"
        android:layout_alignEnd="@+id/textView" />

</RelativeLayout>
